// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fn() versus empty package.json, new Node.js, new npm 1`] = `
Object {
  "engines": Object {
    "node": ">=8",
    "npm": ">=6",
  },
}
`;

exports[`fn() versus empty package.json, old Node.js, old npm 1`] = `
Object {
  "engines": Object {
    "node": ">=8",
    "npm": ">=5",
  },
}
`;

exports[`fn() versus package.json with old engines, new Node.js, new npm 1`] = `
Object {
  "engines": Object {
    "node": ">=10.10",
    "npm": ">=6",
  },
}
`;
